src/dts/tests/union/union.exp
Error: union.js:2
  2: var a : number = x;
                      ^ string. This type is incompatible with
  2: var a : number = x;
             ^^^^^^ number


Found 1 error
